# LLAMA2-instruction-tuning

./: README.md  pyproject.toml
instruct/: dataset.py  train.py
instruct/dataset/: qa1000.json
instruct/scripts/: get_data.py  get_data2.py  get_data3.py  get_data_oai.py
