[tool.poetry]
name = "instruction-tuning"
version = "0.1.0"
description = "instruction tuning with JAX"
authors = ["tobiadefami <tobiadefami@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "instruction_tuning"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.2"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.5"
lxml = "^4.9.3"
accelerate = "^0.21.0"
protobuf = "^4.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
